--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .[test]
+	pip install .[cython]
     - name: Check dependencies
       if: success() || failure()
       run: |
