pypi, cython fix

--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -20,6 +20,9 @@ jobs:
         pip install
         build
         --user
+    - name: install requirements
+      run: >-
+        pip install -r requirements.txt
     - name: Build binaries
       run: >-
         python -m
