--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -14,6 +14,7 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: '3.x'
+    - name: install pypa
       run: >-
         python -m
         pip install
