updated makefile to only build source, no wheel, minor updates to test

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,9 @@ name: SOAP test
 
 on:
   push:
-    branches: [ main, test, release* ]
+    branches: [ test, release* ]
   pull_request:
-    branches: [ main, test, release* ]
+    branches: [ main, release* ]
 
 
 jobs:
