change pipeline location, updatesto manifest

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,12 @@ requires = [
     ]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools.packages.find]
+where = ["src"]
+include = ["soapcw*", "soapcw_pipeline"] 
+exclude = ["docs*"]
+namespaces = false
+
 [project]
 name = "soapcw"
 version = "0.2.4"
@@ -44,19 +50,57 @@ dependencies = [
     "pandas"
     ]
 
+
+[project.optional-dependencies]
+# test suite
+test = [
+    "codecov",
+    "coverage",
+    "coverage-badge",
+    "pytest >= 4.6",
+    "pytest_socket",
+    "pytest-astropy",
+    "pytest-coverage",
+    "pytest-runner",
+]
+# documentation
+docs = [
+    "autodoc",
+    "nbsphinx",
+    "numpydoc",
+    "rtd-sphinx-theme",
+    "sphinx >= 2.0",
+    "sphinx-design",
+]
+# development
+dev = [
+    "black",
+    "codespell >= 1.3.0",
+    "isort[pyproject]",
+    "flake8",
+    "pre-commit",
+]
+
 [project.urls]
 Documentation = "https://soapcw.readthedocs.io/"
 Repository = "https://github.com/jcbayley/soapcw"
 
 [project.scripts]
-soapcw-make-dag-files-lines = "pipeline.make_dag_files_lines:main"
-soapcw-make-dag-files-astro = "pipeline.make_dag_files_astro:main"
-soapcw-run-soap-lines = "pipeline.run_full_soap_lines:main"
-soapcw-run-soap-astro = "pipeline.run_full_soap_astro:main"
-soapcw-make-html-pages = "pipeline.make_html_page:main"
+soapcw-make-dag-files-lines = "soapcw_pipeline.make_dag_files_lines:main"
+soapcw-make-dag-files-astro = "soapcw_pipeline.make_dag_files_astro:main"
+soapcw-run-soap-lines = "soapcw_pipeline.run_full_soap_lines:main"
+soapcw-run-soap-astro = "soapcw_pipeline.run_full_soap_astro:main"
+soapcw-make-html-pages = "soapcw_pipeline.make_html_page:main"
 soapcw-cnn-make-data-dag = "soapcw.cnn.cnn_data_dag_gen:main"
 soapcw-cnn-make-data = "soapcw.cnn.cnn_data_gen:main"
 soapcw-cnn-train-model = "soapcw.cnn.train_model:main"
+
+[tool.setuptools]
+license-files = [ "LICENSE" ]
+include-package-data = true
+
+
+
 
 
 
