updated to include start and end times and fixed run html bug

--- a/src/soapcw_pipeline/config_files/test_astro.ini
+++ b/src/soapcw_pipeline/config_files/test_astro.ini
@@ -22,6 +22,8 @@ band_widths = [0.1,0.2,0.3,0.4]
 strides     = [1,2,3,4]
 obs_run     = O3
 n_summed_sfts = 48
+start_time = -1
+end_time = -1
 
 [lookuptable]
 type = power
