--- a/src/soapcw_pipeline/config_files/test_lines.ini
+++ b/src/soapcw_pipeline/config_files/test_lines.ini
@@ -22,6 +22,8 @@ band_widths = [0.1]
 strides     = [1]
 obs_run     = O3
 n_summed_sfts = 48
+start_time = -1
+end_time = -1
 
 [lookuptable]
 type = power
