--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ stages:
   stage: test
   image: python
   script:
+    - pip install -r requirements.txt
     - python setup.py install
     - ls
     - cd
