- update narroband sft generation to work from config - updated cnn data gen with new config 	- fixed to work properly for all frequency bands - updated cnn training scripts to correctly train and save models for each band - updated how torch models are loaded in - updated javascript for html pages to allow sending of links to specific pages

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -98,6 +98,7 @@ soapcw-make-html-pages = "soapcw_pipeline.make_html_page:main"
 soapcw-cnn-make-data-dag = "soapcw.cnn.cnn_data_dag_gen:main"
 soapcw-cnn-make-data = "soapcw.cnn.cnn_data_gen:main"
 soapcw-cnn-train-model = "soapcw.cnn.train_model:main"
+soapcw-narrowband-sfts = "soapcw.cnn.narrowband_sfts:main"
 
 
 
