updated cnn training and data generation scripts - fixed bug git status

--- a/src/soapcw/default.ini
+++ b/src/soapcw/default.ini
@@ -2,7 +2,11 @@
 root_dir = //
 temp_dir = //
 save_dir = /
-run_vitmapspect = True
+run_vitmapspect = "true"
+run_vitmap = "false"
+run_vitmapstat = "false"
+run_spect = "false"
+run_all = "false"
 
 [condor]
 memory = 10000
@@ -28,7 +32,7 @@ start_time = 1368946818
 end_time = 1389427218
 
 [cnn_data]            
-resize_image = None                                        
+resize_image = "none"                                        
 type = train, validation                                         
 snrmin= 40                                           
 snrmax= 200                                          
@@ -42,7 +46,7 @@ save_options=[
     "paths",                                         
     "powers"]                                        
 nperband = 10                                        
-gen_noise_only = True
+gen_noise_only_bands = "true"
 fd_range = (-1e-9, -1e-16)
 alpha_range = (0, 6.2831853072)
 sindelta_range = (-1, 1)
@@ -51,6 +55,7 @@ psi_range = (0, 1.5707963268)
 cosi_range = (-1, 1)
 earth_ephemeredis = "~/lalsuite/lalpulsar/lib/earth00-40-DE430.dat.gz"
 sun_ephemeredis = "~/lalsuite/lalpulsar/lib/sun00-40-DE430.dat.gz"
+shift_bins = [-60,-30,0,30,60]
 
 [lookuptable]
 lookup_type = power
@@ -75,10 +80,15 @@ conv_layers = [(32, 8, 2, 1),(32, 8, 2, 1),]
 avg_pool_size = (5,5)                                     
 fc_layers = [64,32,2]                                 
 n_epochs=100                                          
-n_train_multi_size=30                                 
-save_interval=2                                       
+n_train_multi_size='none'                                 
+save_interval=10                                       
 band_types = even, odd                                
 n_channels = 3
+scheduler_start = 0
+scheduler_length = 100
+scheduler_weight = 1.0
+train_snr_min = "none"
+train_snr_max = "none"
 
 [narrowband]
 band_min = 20
@@ -92,7 +102,7 @@ cnn_train_data_save_dir = /
 cnn_model_directory = /
 save_directory = /
 sub_directory = soap_C00_gated
-overwrite_files = False
+overwrite_files = "false"
 
 [scripts]
 search_exec=soapcw-run-soap-astro
