CNN  - updated the training to save appropriate outputs and load in data more efficiently  - added a benchmark function which tests the model on a set of injections  - modified scripts generating training data to be consistent and save to a better format
CW
 - updated the injection code to use pyfstat (makefakedata) when injecting into real data

Line aware
 - updated to allow options for different parameters

SOAP
 - minor update to allow saving of the SOAP outputs to a file

pipeline
 - updated to take in inputs for transition matrix properly
 - html page correctly adds line info
 - dag generatio updated to include all new inputs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -99,6 +99,7 @@ soapcw-cnn-make-data-dag = "soapcw.cnn.cnn_data_dag_gen:main"
 soapcw-cnn-make-data = "soapcw.cnn.cnn_data_gen:main"
 soapcw-cnn-train-model = "soapcw.cnn.train_model:main"
 soapcw-narrowband-sfts = "soapcw.cnn.narrowband_sfts:main"
+soapcw-make-line-aware-statistics = "soapcw.line_aware_stat.save_lookup:main"
 
 
 
