--- a/src/soapcw/default.ini
+++ b/src/soapcw/default.ini
@@ -53,8 +53,8 @@ sindelta_range = (-1, 1)
 phi0_range = (0, 6.2831853072)
 psi_range = (0, 1.5707963268)
 cosi_range = (-1, 1)
-earth_ephemeredis = "~/lalsuite/lalpulsar/lib/earth00-40-DE430.dat.gz"
-sun_ephemeredis = "~/lalsuite/lalpulsar/lib/sun00-40-DE430.dat.gz"
+earth_ephemeredis = "none"
+sun_ephemeredis = "none"
 shift_bins = [-60,-30,0,30,60]
 
 [lookuptable]
